feat(dev): support select options and cache selection

--- a/packages/dev/index.html
+++ b/packages/dev/index.html
@@ -6,7 +6,12 @@
     <title>AntV Infographic</title>
   </head>
   <body>
+    <div>
+      <select id="structure-select"></select>
+      <select id="item-select"></select>
+      <select id="background-select"></select>
+    </div>
     <div id="root"></div>
-    <script src="./src/renderer.ts" type="module"></script>
+    <script src="./src/main.ts" type="module"></script>
   </body>
 </html>
